--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -75,22 +75,23 @@ endif
 
 OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
                   guidriver.o memdump.o minIni.o nuklear_mousepointer.o \
-                  nuklear_tooltip.o rs232.o serialmon.o specialfolder.o \
-                  svd-support.o swotrace.o tcpip.o xmltractor.o \
-                  decodectf.o parsetsdl.o \
+                  nuklear_style.o nuklear_tooltip.o rs232.o serialmon.o \
+                  specialfolder.o svd-support.o swotrace.o tcpip.o \
+                  xmltractor.o decodectf.o parsetsdl.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   elf.o gdb-rsp.o guidriver.o minIni.o nuklear_mousepointer.o \
-                  nuklear_tooltip.o rs232.o specialfolder.o tcpip.o xmltractor.o \
+                  nuklear_style.o nuklear_tooltip.o rs232.o specialfolder.o \
+                  tcpip.o xmltractor.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o \
-                  nuklear_mousepointer.o nuklear_tooltip.o rs232.o \
-                  specialfolder.o swotrace.o tcpip.o \
+                  nuklear_style.o nuklear_mousepointer.o nuklear_tooltip.o \
+                  rs232.o specialfolder.o swotrace.o tcpip.o \
                   xmltractor.o decodectf.o parsetsdl.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
@@ -153,6 +154,8 @@ noc_file_dialog.o : INCLUDE += `pkg-config --cflags gtk+-3.0`
 noc_file_dialog.o : noc_file_dialog.c
 
 nuklear_mousepointer.o : nuklear_mousepointer.c
+
+nuklear_style.o : nuklear_style.c
 
 nuklear_tooltip.o : nuklear_tooltip.c
 
