--- a/source/makefile.dep
+++ b/source/makefile.dep
@@ -3,95 +3,101 @@
 # GENERATED DEPENDENCIES. DO NOT DELETE.
 
 bmdebug.obj : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
-	nuklear_config.h noc_file_dialog.h nuklear_mousepointer.h \
-	nuklear_tooltip.h memdump.h minIni.h minGlue.h specialfolder.h \
-	svd-support.h tcpip.h parsetsdl.h decodectf.h swotrace.h serialmon.h
+	nuklear_config.h memdump.h noc_file_dialog.h nuklear_mousepointer.h \
+	nuklear_style.h nuklear_tooltip.h minIni.h minGlue.h serialmon.h \
+	specialfolder.h svd-support.h tcpip.h parsetsdl.h decodectf.h \
+	swotrace.h
+bmflash.obj : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
+	nuklear_style.h nuklear_tooltip.h bmp-scan.h bmp-script.h \
+	bmp-support.h rs232.h elf.h gdb-rsp.h minIni.h minGlue.h tcpip.h \
+	specialfolder.h
 bmp-scan.obj : bmp-scan.h tcpip.h
 bmp-script.obj : bmp-script.h specialfolder.h
+bmp-support.obj : bmp-scan.h bmp-script.h bmp-support.h rs232.h crc32.h \
+	elf.h gdb-rsp.h tcpip.h xmltractor.h
+bmscan.obj : bmp-scan.h tcpip.h
+bmtrace.obj : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
+	bmp-support.h rs232.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
+	noc_file_dialog.h nuklear_mousepointer.h nuklear_style.h \
+	nuklear_tooltip.h specialfolder.h tcpip.h dwarf.h elf.h parsetsdl.h \
+	decodectf.h swotrace.h
+crc32.obj : crc32.h
+decodectf.obj : parsetsdl.h decodectf.h dwarf.h
+dirent.obj : dirent.h
 dwarf.obj : dwarf.h elf.h
 elf.obj : elf.h
+elf-postlink.obj : elf.h
+gdb-rsp.obj : bmp-support.h rs232.h gdb-rsp.h tcpip.h
 guidriver.obj : guidriver.h nuklear.h nuklear_config.h \
 	nuklear_mousepointer.h nuklear_gdip.h
-memdump.obj : memdump.h
-minini.obj : minIni.h minGlue.h
-nuklear_mousepointer.obj : nuklear_mousepointer.h
-nuklear_tooltip.obj : nuklear_tooltip.h nuklear.h nuklear_config.h
-rs232.obj : rs232.h
-serialmon.obj : bmp-scan.h decodectf.h parsetsdl.h serialmon.h
-specialfolder.obj : specialfolder.h
-strlcpy.obj : strlcpy.h
-tcpip.obj : bmp-scan.h tcpip.h
-usb-support.obj : usb-support.h
-svd-support.obj : xmltractor.h
-decodectf.obj : parsetsdl.h decodectf.h dwarf.h
-parsetsdl.obj : parsetsdl.h
-swotrace.obj : usb-support.h bmp-scan.h guidriver.h nuklear.h \
-	nuklear_config.h parsetsdl.h decodectf.h swotrace.h
-xmltractor.obj : xmltractor.h
+memdump.obj : guidriver.h nuklear.h nuklear_config.h memdump.h
+minIni.obj : minIni.h minGlue.h
+noc_file_dialog.obj : noc_file_dialog.h
 nuklear.obj : nuklear.h nuklear_config.h
 nuklear_gdip.obj : nuklear.h nuklear_config.h nuklear_gdip.h
-noc_file_dialog.obj : noc_file_dialog.h
-bmflash.obj : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
-	nuklear_tooltip.h bmp-scan.h bmp-script.h bmp-support.h elf.h \
-	gdb-rsp.h minIni.h minGlue.h rs232.h tcpip.h specialfolder.h
-bmp-support.obj : bmp-scan.h bmp-script.h bmp-support.h crc32.h elf.h \
-	gdb-rsp.h rs232.h tcpip.h xmltractor.h
-crc32.obj : crc32.h
-gdb-rsp.obj : bmp-support.h gdb-rsp.h rs232.h tcpip.h
-minIni.obj : minIni.h minGlue.h
-bmtrace.obj : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
-	bmp-support.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
-	noc_file_dialog.h nuklear_mousepointer.h nuklear_tooltip.h rs232.h \
-	specialfolder.h tcpip.h dwarf.h elf.h parsetsdl.h decodectf.h \
-	swotrace.h
-bmscan.obj : bmp-scan.h tcpip.h
-elf-postlink.obj : elf.h
+nuklear_mousepointer.obj : nuklear_mousepointer.h
+nuklear_style.obj : nuklear_style.h nuklear.h nuklear_config.h
+nuklear_tooltip.obj : nuklear_tooltip.h nuklear.h nuklear_config.h
+parsetsdl.obj : parsetsdl.h
+rs232.obj : rs232.h
+serialmon.obj : bmp-scan.h guidriver.h nuklear.h nuklear_config.h \
+	rs232.h serialmon.h parsetsdl.h decodectf.h dwarf.h
+specialfolder.obj : specialfolder.h
+strlcpy.obj : strlcpy.h
+svd-support.obj : xmltractor.h
+swotrace.obj : usb-support.h bmp-scan.h guidriver.h nuklear.h \
+	nuklear_config.h parsetsdl.h decodectf.h dwarf.h swotrace.h
+tcpip.obj : bmp-scan.h tcpip.h
 tracegen.obj : parsetsdl.h
+usb-support.obj : usb-support.h
+xmltractor.obj : xmltractor.h
 
 
 bmdebug.o : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
-	nuklear_config.h noc_file_dialog.h nuklear_mousepointer.h \
-	nuklear_tooltip.h memdump.h minIni.h minGlue.h specialfolder.h \
-	svd-support.h tcpip.h parsetsdl.h decodectf.h swotrace.h \
-	serialmon.h res/icon_debug_64.h
+	nuklear_config.h memdump.h noc_file_dialog.h nuklear_mousepointer.h \
+	nuklear_style.h nuklear_tooltip.h minIni.h minGlue.h serialmon.h \
+	specialfolder.h svd-support.h tcpip.h parsetsdl.h decodectf.h \
+	swotrace.h res/icon_debug_64.h
+bmflash.o : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
+	nuklear_style.h nuklear_tooltip.h bmp-scan.h bmp-script.h \
+	bmp-support.h rs232.h elf.h gdb-rsp.h minIni.h minGlue.h tcpip.h \
+	specialfolder.h res/icon_download_64.h
 bmp-scan.o : bmp-scan.h tcpip.h
 bmp-script.o : bmp-script.h specialfolder.h
+bmp-support.o : bmp-scan.h bmp-script.h bmp-support.h rs232.h crc32.h \
+	elf.h gdb-rsp.h tcpip.h xmltractor.h
+bmscan.o : bmp-scan.h tcpip.h
+bmtrace.o : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
+	bmp-support.h rs232.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
+	noc_file_dialog.h nuklear_mousepointer.h nuklear_style.h \
+	nuklear_tooltip.h specialfolder.h tcpip.h dwarf.h elf.h parsetsdl.h \
+	decodectf.h swotrace.h res/icon_download_64.h
+crc32.o : crc32.h
+decodectf.o : parsetsdl.h decodectf.h dwarf.h
 dwarf.o : dwarf.h elf.h
 elf.o : elf.h
+elf-postlink.o : elf.h
+gdb-rsp.o : bmp-support.h rs232.h gdb-rsp.h tcpip.h
 guidriver.o : guidriver.h nuklear.h nuklear_config.h \
 	nuklear_mousepointer.h findfont.h lodepng.h nuklear_glfw_gl2.h
-memdump.o : memdump.h
+lodepng.o : lodepng.h
+memdump.o : guidriver.h nuklear.h nuklear_config.h memdump.h
 minIni.o : minIni.h minGlue.h
-nuklear_tooltip.o : nuklear_tooltip.h nuklear.h nuklear_config.h
-nuklear_mousepointer.o : nuklear_mousepointer.h
-rs232.o : rs232.h
-serialmon.o : bmp-scan.h decodectf.h parsetsdl.h serialmon.h
-specialfolder.o : specialfolder.h
-tcpip.o : bmp-scan.h tcpip.h
-decodectf.o : parsetsdl.h decodectf.h dwarf.h
-parsetsdl.o : parsetsdl.h
-svd-support.o : xmltractor.h
-swotrace.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h \
-	parsetsdl.h decodectf.h swotrace.h
-xmltractor.o : xmltractor.h
+noc_file_dialog.o : noc_file_dialog.h
 nuklear.o : nuklear.h nuklear_config.h
 nuklear_glfw_gl2.o : nuklear_config.h nuklear.h nuklear_glfw_gl2.h
-noc_file_dialog.o : noc_file_dialog.h
-lodepng.o : lodepng.h
-bmflash.o : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
-	nuklear_tooltip.h bmp-scan.h bmp-script.h bmp-support.h elf.h \
-	gdb-rsp.h minIni.h minGlue.h rs232.h tcpip.h specialfolder.h \
-	res/icon_download_64.h
-bmp-support.o : bmp-scan.h bmp-script.h bmp-support.h crc32.h elf.h \
-	gdb-rsp.h rs232.h tcpip.h xmltractor.h
-crc32.o : crc32.h
-gdb-rsp.o : bmp-support.h gdb-rsp.h rs232.h tcpip.h
-bmtrace.o : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
-	bmp-support.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
-	noc_file_dialog.h nuklear_mousepointer.h nuklear_tooltip.h rs232.h \
-	specialfolder.h tcpip.h dwarf.h elf.h parsetsdl.h decodectf.h \
-	swotrace.h res/icon_download_64.h
-bmscan.o : bmp-scan.h tcpip.h
-elf-postlink.o : elf.h
+nuklear_mousepointer.o : nuklear_mousepointer.h
+nuklear_style.o : nuklear_style.h nuklear.h nuklear_config.h
+nuklear_tooltip.o : nuklear_tooltip.h nuklear.h nuklear_config.h
+parsetsdl.o : parsetsdl.h
+rs232.o : rs232.h
+serialmon.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h rs232.h \
+	serialmon.h parsetsdl.h decodectf.h dwarf.h
+specialfolder.o : specialfolder.h
+svd-support.o : xmltractor.h
+swotrace.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h \
+	parsetsdl.h decodectf.h dwarf.h swotrace.h
+tcpip.o : bmp-scan.h tcpip.h
 tracegen.o : parsetsdl.h
+xmltractor.o : xmltractor.h
 
