Improved support for GDB 10.8; support for DWARF v5; many minor changes.

--- a/source/Makefile.msvc
+++ b/source/Makefile.msvc
@@ -73,15 +73,15 @@ OBJLIST_BMDEBUG = bmdebug.obj bmp-scan.obj bmp-script.obj dirent.obj dwarf.obj \
 
 OBJLIST_BMFLASH = bmflash.obj bmp-scan.obj bmp-script.obj bmp-support.obj crc32.obj \
                   elf.obj gdb-rsp.obj guidriver.obj minIni.obj nuklear_mousepointer.obj \
-                  nuklear_style.obj nuklear_tooltip.obj rs232.obj specialfolder.obj \
-                  strlcpy.obj tcpip.obj xmltractor.obj \
+                  nuklear_style.obj nuklear_tooltip.obj picoro.obj rs232.obj \
+                  specialfolder.obj strlcpy.obj tcpip.obj xmltractor.obj \
                   nuklear.obj nuklear_gdip.obj noc_file_dialog.obj
 
 OBJLIST_BMTRACE = bmtrace.obj bmp-scan.obj bmp-script.obj bmp-support.obj crc32.obj \
                   dwarf.obj elf.obj gdb-rsp.obj guidriver.obj minIni.obj \
                   nuklear_mousepointer.obj nuklear_style.obj nuklear_tooltip.obj \
-                  rs232.obj specialfolder.obj swotrace.obj strlcpy.obj tcpip.obj \
-                  usb-support.obj xmltractor.obj decodectf.obj parsetsdl.obj \
+                  picoro.obj rs232.obj specialfolder.obj swotrace.obj strlcpy.obj \
+                  tcpip.obj usb-support.obj xmltractor.obj decodectf.obj parsetsdl.obj \
                   nuklear.obj nuklear_gdip.obj noc_file_dialog.obj
 
 OBJLIST_BMSCAN = bmscan.obj bmp-scan.obj tcpip.obj
@@ -144,6 +144,8 @@ nuklear_style.obj : nuklear_style.c
 nuklear_tooltip.obj : nuklear_tooltip.c
 
 parsetsdl.obj : parsetsdl.c
+
+picoro.obj : picoro.c
 
 rs232.obj : rs232.c
 
