--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -83,15 +83,15 @@ OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   elf.o gdb-rsp.o guidriver.o minIni.o nuklear_mousepointer.o \
-                  nuklear_style.o nuklear_tooltip.o rs232.o specialfolder.o \
-                  tcpip.o xmltractor.o \
+                  nuklear_style.o nuklear_tooltip.o picoro.o rs232.o \
+                  specialfolder.o tcpip.o xmltractor.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o \
                   nuklear_style.o nuklear_mousepointer.o nuklear_tooltip.o \
-                  rs232.o specialfolder.o swotrace.o tcpip.o \
+                  picoro.o rs232.o specialfolder.o swotrace.o tcpip.o \
                   xmltractor.o decodectf.o parsetsdl.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
                   findfont.o lodepng.o
@@ -160,6 +160,8 @@ nuklear_style.o : nuklear_style.c
 nuklear_tooltip.o : nuklear_tooltip.c
 
 parsetsdl.o : parsetsdl.c
+
+picoro.o : picoro.c
 
 rs232.o : rs232.c
 
