--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -78,15 +78,15 @@ OBJLIST_BMDEBUG = bmdebug.o bmp-scan.o bmp-script.o dwarf.o elf.o \
 
 OBJLIST_BMFLASH = bmflash.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   elf.o gdb-rsp.o guidriver.o minIni.o nuklear_mousepointer.o \
-                  nuklear_style.o nuklear_tooltip.o rs232.o specialfolder.o \
-                  strlcpy.o tcpip.o xmltractor.o \
+                  nuklear_style.o nuklear_tooltip.o picoro.o rs232.o \
+                  specialfolder.o strlcpy.o tcpip.o xmltractor.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMTRACE = bmtrace.o bmp-scan.o bmp-script.o bmp-support.o crc32.o \
                   dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o \
                   nuklear_mousepointer.o nuklear_style.o nuklear_tooltip.o \
-                  rs232.o specialfolder.o swotrace.o strlcpy.o tcpip.o \
-                  usb-support.o xmltractor.o decodectf.o parsetsdl.o \
+                  picoro.o rs232.o specialfolder.o swotrace.o strlcpy.o \
+                  tcpip.o usb-support.o xmltractor.o decodectf.o parsetsdl.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMSCAN = bmscan.o bmp-scan.o tcpip.o
@@ -148,6 +148,8 @@ nuklear_style.o : nuklear_style.c
 nuklear_tooltip.o : nuklear_tooltip.c
 
 parsetsdl.o : parsetsdl.c
+
+picoro.o: picoro.c
 
 rs232.o : rs232.c
 
