--- a/source/makefile.dep
+++ b/source/makefile.dep
@@ -9,12 +9,12 @@ bmdebug.obj : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
 	swotrace.h
 bmflash.obj : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
 	nuklear_style.h nuklear_tooltip.h bmp-scan.h bmp-script.h \
-	bmp-support.h rs232.h elf.h gdb-rsp.h minIni.h minGlue.h tcpip.h \
-	specialfolder.h
+	bmp-support.h rs232.h elf.h gdb-rsp.h minIni.h minGlue.h picoro.h \
+	tcpip.h specialfolder.h
 bmp-scan.obj : bmp-scan.h tcpip.h
 bmp-script.obj : bmp-script.h specialfolder.h
 bmp-support.obj : bmp-scan.h bmp-script.h bmp-support.h rs232.h crc32.h \
-	elf.h gdb-rsp.h tcpip.h xmltractor.h
+	elf.h gdb-rsp.h picoro.h tcpip.h xmltractor.h
 bmscan.obj : bmp-scan.h tcpip.h
 bmtrace.obj : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
 	bmp-support.h rs232.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
@@ -39,6 +39,7 @@ nuklear_mousepointer.obj : nuklear_mousepointer.h
 nuklear_style.obj : nuklear_style.h nuklear.h nuklear_config.h
 nuklear_tooltip.obj : nuklear_tooltip.h nuklear.h nuklear_config.h
 parsetsdl.obj : parsetsdl.h
+picoro.obj : picoro.h
 rs232.obj : rs232.h
 serialmon.obj : bmp-scan.h guidriver.h nuklear.h nuklear_config.h \
 	rs232.h serialmon.h parsetsdl.h decodectf.h dwarf.h
@@ -60,12 +61,12 @@ bmdebug.o : bmp-scan.h bmp-script.h dwarf.h guidriver.h nuklear.h \
 	swotrace.h res/icon_debug_64.h
 bmflash.o : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
 	nuklear_style.h nuklear_tooltip.h bmp-scan.h bmp-script.h \
-	bmp-support.h rs232.h elf.h gdb-rsp.h minIni.h minGlue.h tcpip.h \
-	specialfolder.h res/icon_download_64.h
+	bmp-support.h rs232.h elf.h gdb-rsp.h minIni.h minGlue.h picoro.h \
+	tcpip.h specialfolder.h res/icon_download_64.h
 bmp-scan.o : bmp-scan.h tcpip.h
 bmp-script.o : bmp-script.h specialfolder.h
 bmp-support.o : bmp-scan.h bmp-script.h bmp-support.h rs232.h crc32.h \
-	elf.h gdb-rsp.h tcpip.h xmltractor.h
+	elf.h gdb-rsp.h picoro.h tcpip.h xmltractor.h
 bmscan.o : bmp-scan.h tcpip.h
 bmtrace.o : guidriver.h nuklear.h nuklear_config.h bmp-script.h \
 	bmp-support.h rs232.h bmp-scan.h gdb-rsp.h minIni.h minGlue.h \
@@ -90,6 +91,7 @@ nuklear_mousepointer.o : nuklear_mousepointer.h
 nuklear_style.o : nuklear_style.h nuklear.h nuklear_config.h
 nuklear_tooltip.o : nuklear_tooltip.h nuklear.h nuklear_config.h
 parsetsdl.o : parsetsdl.h
+picoro.o : picoro.h
 rs232.o : rs232.h
 serialmon.o : bmp-scan.h guidriver.h nuklear.h nuklear_config.h rs232.h \
 	serialmon.h parsetsdl.h decodectf.h dwarf.h
