BMDebug & BMTrace: fixed calculation of clock divider for SWO trace in Manchester mode. Reverted "click on release" configuration in Nuklear, as it gives problems with scrolling (dragging the scroll bar). Better detection of native Black Magic Probe, for hardware version 2.3. Improved GDB-RSP script support. Improved detection of target MCU. Allow GCC attributes in TSDL files (for function generation).

--- a/source/Makefile.msvc
+++ b/source/Makefile.msvc
@@ -64,8 +64,8 @@ LFLAGS_C  = $(L_DEBUG) /NOLOGO /SUBSYSTEM:console
 # -------------------------------------------------------------
 
 OBJLIST_BMDEBUG = bmdebug.obj armdisasm.obj bmcommon.obj bmp-scan.obj bmp-script.obj \
-                  demangle.obj dirent.obj dwarf.obj elf.obj guidriver.obj memdump.obj \
-                  minIni.obj nuklear_mousepointer.obj nuklear_splitter.obj \
+                  demangle.obj dirent.obj dwarf.obj elf.obj guidriver.obj mcu-info.obj \
+                  memdump.obj minIni.obj nuklear_mousepointer.obj nuklear_splitter.obj \
                   nuklear_style.obj nuklear_tooltip.obj rs232.obj serialmon.obj \
                   specialfolder.obj strlcpy.obj svd-support.obj swotrace.obj tcpip.obj \
                   usb-support.obj xmltractor.obj decodectf.obj parsetsdl.obj \
@@ -80,7 +80,7 @@ OBJLIST_BMFLASH = bmflash.obj bmcommon.obj bmp-scan.obj bmp-script.obj bmp-suppo
 
 OBJLIST_BMTRACE = bmtrace.obj bmcommon.obj bmp-scan.obj bmp-script.obj bmp-support.obj \
                   crc32.obj demangle.obj dwarf.obj elf.obj gdb-rsp.obj guidriver.obj \
-                  minIni.obj nuklear_mousepointer.obj nuklear_splitter.obj \
+                  mcu-info.obj minIni.obj nuklear_mousepointer.obj nuklear_splitter.obj \
                   nuklear_style.obj nuklear_tooltip.obj picoro.obj rs232.obj \
                   specialfolder.obj swotrace.obj strlcpy.obj tcpip.obj usb-support.obj \
                   xmltractor.obj decodectf.obj parsetsdl.obj \
@@ -142,6 +142,8 @@ gdb-rsp.obj : gdb-rsp.c
 guidriver.obj : guidriver.c
 
 ident.obj : ident.c
+
+mcu-info.obj : mcu-info.c
 
 memdump.obj : memdump.c
 
