--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -74,7 +74,7 @@ endif
 # -------------------------------------------------------------
 
 OBJLIST_BMDEBUG = bmdebug.o armdisasm.o bmcommon.o bmp-scan.o bmp-script.o \
-                  demangle.o dwarf.o elf.o guidriver.o memdump.o minIni.o \
+                  demangle.o dwarf.o elf.o guidriver.o mcu-info.o memdump.o minIni.o \
                   nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
                   nuklear_tooltip.o rs232.o serialmon.o specialfolder.o svd-support.o \
                   swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
@@ -89,8 +89,8 @@ OBJLIST_BMFLASH = bmflash.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
                   findfont.o lodepng.o
 
 OBJLIST_BMTRACE = bmtrace.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
-                  crc32.o demangle.o dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o \
-                  nuklear_splitter.o nuklear_style.o nuklear_mousepointer.o \
+                  crc32.o demangle.o dwarf.o elf.o gdb-rsp.o guidriver.o mcu-info.o \
+                  minIni.o nuklear_splitter.o nuklear_style.o nuklear_mousepointer.o \
                   nuklear_tooltip.o picoro.o rs232.o specialfolder.o swotrace.o \
                   tcpip.o xmltractor.o decodectf.o parsetsdl.o \
                   nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o \
@@ -154,6 +154,8 @@ guidriver.o : guidriver.c
 ident.o : ident.c
 
 lodepng.o : lodepng.c
+
+mcu-info.o : mcu-info.c
 
 memdump.o : memdump.c
 
