--- a/source/Makefile.mingw
+++ b/source/Makefile.mingw
@@ -70,7 +70,7 @@ endif
 # -------------------------------------------------------------
 
 OBJLIST_BMDEBUG = bmdebug.o armdisasm.o bmcommon.o bmp-scan.o bmp-script.o \
-                  demangle.o dwarf.o elf.o guidriver.o memdump.o minIni.o \
+                  demangle.o dwarf.o elf.o guidriver.o mcu-info.o memdump.o minIni.o \
                   nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
                   nuklear_tooltip.o rs232.o serialmon.o specialfolder.o strlcpy.o \
                   svd-support.o swotrace.o tcpip.o usb-support.o xmltractor.o \
@@ -84,8 +84,8 @@ OBJLIST_BMFLASH = bmflash.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
 
 OBJLIST_BMTRACE = bmtrace.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
-                  crc32.o demangle.o dwarf.o elf.o gdb-rsp.o guidriver.o minIni.o \
-                  nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
+                  crc32.o demangle.o dwarf.o elf.o gdb-rsp.o guidriver.o mcu-info.o \
+                  minIni.o nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
                   nuklear_tooltip.o picoro.o rs232.o specialfolder.o swotrace.o \
                   strlcpy.o tcpip.o usb-support.o xmltractor.o decodectf.o parsetsdl.o \
                   nuklear.o nuklear_gdip.o noc_file_dialog.o
@@ -144,6 +144,8 @@ gdb-rsp.o : gdb-rsp.c
 guidriver.o : guidriver.c
 
 ident.o :ident.c
+
+mcu-info.o : mcu-info.c
 
 memdump.o : memdump.c
 
