--- a/source/makefile.dep
+++ b/source/makefile.dep
@@ -5,7 +5,7 @@
 armdisasm.obj : armdisasm.h
 bmcommon.obj : bmcommon.h bmp-scan.h specialfolder.h
 bmdebug.obj : armdisasm.h bmcommon.h bmp-scan.h bmp-script.h demangle.h \
-	dwarf.h guidriver.h nuklear.h nuklear_config.h memdump.h \
+	dwarf.h guidriver.h nuklear.h nuklear_config.h mcu-info.h memdump.h \
 	noc_file_dialog.h nuklear_mousepointer.h nuklear_style.h \
 	nuklear_splitter.h nuklear_tooltip.h minIni.h minGlue.h serialmon.h \
 	specialfolder.h svd-support.h tcpip.h parsetsdl.h decodectf.h \
@@ -20,7 +20,7 @@ bmp-support.obj : bmp-scan.h bmp-script.h bmp-support.h rs232.h crc32.h \
 	elf.h gdb-rsp.h picoro.h tcpip.h xmltractor.h
 bmscan.obj : bmp-scan.h tcpip.h
 bmtrace.obj : demangle.h guidriver.h nuklear.h nuklear_config.h bmcommon.h \
-	bmp-script.h bmp-support.h rs232.h bmp-scan.h gdb-rsp.h minIni.h \
+	bmp-script.h bmp-support.h rs232.h bmp-scan.h gdb-rsp.h mcu-info.h minIni.h \
 	minGlue.h noc_file_dialog.h nuklear_mousepointer.h nuklear_splitter.h \
 	nuklear_style.h nuklear_tooltip.h specialfolder.h tcpip.h dwarf.h \
 	elf.h parsetsdl.h decodectf.h swotrace.h
@@ -36,6 +36,7 @@ gdb-rsp.obj : bmp-support.h rs232.h gdb-rsp.h tcpip.h
 guidriver.obj : guidriver.h nuklear.h nuklear_config.h \
 	nuklear_mousepointer.h nuklear_gdip.h
 ident.obj : ident.h
+mcu-info.obj : mcu-info.h
 memdump.obj : guidriver.h nuklear.h nuklear_config.h memdump.h
 minIni.obj : minIni.h minGlue.h
 noc_file_dialog.obj : noc_file_dialog.h
@@ -65,7 +66,7 @@ bmcommon.o : bmcommon.h bmp-scan.h specialfolder.h
 bmdebug.o : armdisasm.h bmcommon.h bmp-scan.h bmp-script.h demangle.h dwarf.h \
 	guidriver.h nuklear.h nuklear_config.h memdump.h noc_file_dialog.h \
 	nuklear_mousepointer.h nuklear_style.h nuklear_splitter.h \
-	nuklear_tooltip.h minIni.h minGlue.h serialmon.h specialfolder.h \
+	nuklear_tooltip.h mcu-info.h minIni.h minGlue.h serialmon.h specialfolder.h \
 	svd-support.h tcpip.h parsetsdl.h decodectf.h swotrace.h \
 	swotrace.h res/icon_debug_64.h
 bmflash.o : guidriver.h nuklear.h nuklear_config.h noc_file_dialog.h \
@@ -79,7 +80,7 @@ bmp-support.o : bmp-scan.h bmp-script.h bmp-support.h rs232.h crc32.h \
 	elf.h gdb-rsp.h picoro.h tcpip.h xmltractor.h
 bmscan.o : bmp-scan.h tcpip.h
 bmtrace.o : demangle.h guidriver.h nuklear.h nuklear_config.h bmcommon.h \
-	bmp-script.h bmp-support.h rs232.h bmp-scan.h gdb-rsp.h minIni.h \
+	bmp-script.h bmp-support.h rs232.h bmp-scan.h gdb-rsp.h mcu-info.h minIni.h \
 	minGlue.h noc_file_dialog.h nuklear_mousepointer.h nuklear_splitter.h \
 	nuklear_style.h nuklear_tooltip.h specialfolder.h tcpip.h dwarf.h \
 	elf.h parsetsdl.h decodectf.h swotrace.h \
@@ -97,6 +98,7 @@ guidriver.o : guidriver.h nuklear.h nuklear_config.h \
 	findfont.h lodepng.h nuklear_glfw_gl2.h
 ident.o : ident.h
 lodepng.o : lodepng.h
+mcu-info.o : mcu-info.h
 memdump.o : guidriver.h nuklear.h nuklear_config.h memdump.h
 minIni.o : minIni.h minGlue.h
 noc_file_dialog.o : noc_file_dialog.h
